<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnError"
    android:backgroundTint="@android:color/darker_gray"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_titulo"
        android:text="@string/app_titulo"
        android:textColor="#000"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/app_Mpeso"
        android:hint="@string/app_peso"
        app:layout_constraintTop_toBottomOf="@id/titulo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_peso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_Maltura"
        android:hint="@string/app_altura"
        app:layout_constraintTop_toBottomOf="@id/TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_altura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvResp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="140dp"
        android:layout_height="47dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="156dp"
        android:background="@android:color/holo_blue_dark"
        android:backgroundTint="#AC2C2C"
        android:contentDescription="@string/app_Mcal"
        android:text="@string/app_calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <CheckBox
        android:id="@+id/check_masculino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/app_Mmas"
        android:text="@string/app_mas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextInputLayout2" />

    <CheckBox
        android:id="@+id/check_feminimo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/app_Mfen"
        android:text="@string/app_fen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/check_masculino"
        app:layout_constraintTop_toTopOf="@+id/check_masculino" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="1dp"
        android:contentDescription="@string/app_Mnome"
        android:hint="@string/app_nome_pesssoa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_masculino">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>